test-cases/negative/test_042_invalid_number_literal.lay
# negative test: invalid number literal
# expected: error should be thrown

the variable x of type Number is 12.34.56


